--- a/index.html
+++ b/index.html
@@ -70,5 +70,8 @@
               </div>
 
               </div>
+                
+                 <a href="https://www.instagram.com/sksameergamingofficial/"><img src="insta.jpg" width=50 height=50/></a>
+              <a href="https://www.youtube.com/channel/UCl0LaodC7wOHVceWvOfpCZw"><img src="youtube.jpg" width=50 height=50/></a>
                 </body>
                 </html>
